fix search box being way too long

--- a/assets/main.css
+++ b/assets/main.css
@@ -189,7 +189,7 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
     background-image: url('https://www.w3schools.com/css/searchicon.png');  /* Add a search icon to input */
     background-position: 10px 12px; /* Position the search icon */
     background-repeat: no-repeat; /* Do not repeat the icon image */
-    width: 100%; /* Full-width */
+    width: 91.7%; /* Full-width */
     font-size: 16px; /* Increase font-size */
     padding: 12px 20px 12px 40px; /* Add some padding */
     border: 1px solid #ddd; /* Add a grey border */
